merger and distributor complited